@@ -59,6 +59,7 @@
 	            <version>3.8.1</version>
 		    <configuration>
 		        <configuration>
+		        <compilerArgument>--add-modules=jdk.incubator.httpclient</compilerArgument>
 			    <source>${maven.compiler.source}</source>
 			    <target>${maven.compiler.target}</target>
 			    </configuration>
